fix editar perfil button, and trying to add padding on ios

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -78,4 +78,8 @@ $navbar-burger-color:       $primary;
 $navbar-dropdown-z:         50;
 $navbar-divider-height: 1px;
 
+// Input
+$input-focus-border-color: $green-3;
+$input-focus-box-shadow-size: 0;
+
 @import '~bulma/sass/utilities/_all';
